--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,11 +24,12 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 body {
   line-height: 1.5;
-  
+  width: 100%;
 }
 
 .mobile {
@@ -142,7 +143,7 @@ nav a:hover {
 }
 
 /* Main section */
-
+/*
 .donate {
   text-align: center;
   width: 200px;
@@ -153,7 +154,11 @@ nav a:hover {
 .paypal {
   margin-top: 0.5rem;
 }
+*/
 
+.site-map img:hover {
+  opacity: 0;
+}
 
 /* Content text */
 main p {
