--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -86,18 +86,18 @@ a:visited {
 header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  
   align-items: center;
   background-image: url("../images/logo_banner.jpg");
   background-repeat: no-repeat;
   background-position: left;
-  height: 150px;
+  height: 160px;
   background-color: white;
 }
 
 .logo {
   width: 266px;
-  height: 165px;
+  height: 10px;
   visibility: hidden;
 }
 
@@ -107,13 +107,13 @@ header h3 {
 }
 
 nav {
-  font-size: 20px;
-  font-family: 'Merriweather', serif;
+  font-size: 16px;
+  font-family: 'Oxygen', sans-serif;
   font-weight: bold;
   padding: 0.25rem 0;
   margin: 0.5rem 0;
   border-radius: 15px;
-  width: 100%;
+  flex: 1;
 }
 
 nav ul {
@@ -121,16 +121,18 @@ nav ul {
   justify-content: space-around;
   align-items: center;
   height: fit-content;
+  flex-wrap: wrap;
 }
 
 nav li {
   display: inline;
+  margin: 0.4rem 0;
 }
 
 nav a {
   /*margin: 0.5rem;*/
   color: var(--dark-accent-text);
-  padding: 0.25rem 1.5rem;
+  padding: 0.25rem 1rem;
   border-radius: 15px;
 }
 
@@ -140,6 +142,13 @@ nav a:visited {
 
 nav a:hover {
   background-color: var(--logo-yellow);
+}
+
+@media only screen and (max-width: 960px) {
+
+  .product {
+    width: 47%;
+  }
 }
 
 /* Main section */
@@ -155,10 +164,81 @@ nav a:hover {
   margin-top: 0.5rem;
 }
 */
+/* Main section */
+.fotorama {
+  background-color: var(--logo-yellow);
+}
+/* Gallery section */
+.site-map {
+  background-color: var(--logo-yellow);
+  width: 100%;
+}
 
-.site-map img:hover {
+.gallery {
+  display: flex;
+  justify-content: space-around;
+  margin: 3rem auto;
+  flex-wrap: wrap;
+  max-width: 960px;
+}
+
+.page-launcher {
+  border: 2px solid var(--logo-orange);
+  border-radius: 25px;
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.page-launcher img {
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
+  width: auto;
+  display: block;
+  border-radius: 25px;
+  opacity: 1;
+}
+
+.page-launcher:hover > img {
+  opacity: 0.2;
+}
+
+.page-launcher .caption {
+  color: var(--logo-orange);
+  text-align: center;
+  position: absolute;
   opacity: 0;
 }
+
+.page-launcher:hover > .caption {
+  opacity: 1;
+}
+
+.gallery h2 {
+  color: var(--logo-orange);
+}
+
+
+
+
+
+@media only screen and (max-width: 470px) {
+
+
+  .product {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .gallery {
+    justify-content: center;
+  }
+}
+
 
 /* Content text */
 main p {
@@ -183,13 +263,20 @@ main li {
 /* Footer section */
 footer {
   background-color: var(--logo-yellow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.footer-text {
   border: 1px solid var(--logo-orange);
   border-radius: 15px;
-  padding: 1rem 1.5rem;
+  padding: 1rem;
   text-align: center;
   font-size: 0.75rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0.5rem;
+  width: 960px;
+  max-width: 80%;
 }
 
 footer a {
