--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,7 +97,7 @@ header {
 
 .logo {
   width: 266px;
-  height: 10px;
+  height: 50px;
   visibility: hidden;
 }
 
@@ -151,81 +151,8 @@ nav a:hover {
   }
 }
 
+
 /* Main section */
-/*
-.donate {
-  text-align: center;
-  width: 200px;
-  padding: 0 25px;
-  vertical-align: middle;
-}
-
-.paypal {
-  margin-top: 0.5rem;
-}
-*/
-/* Main section */
-.fotorama {
-  background-color: var(--logo-yellow);
-}
-/* Gallery section */
-.site-map {
-  background-color: var(--logo-yellow);
-  width: 100%;
-}
-
-.gallery {
-  display: flex;
-  justify-content: space-around;
-  margin: 3rem auto;
-  flex-wrap: wrap;
-  max-width: 960px;
-}
-
-.page-launcher {
-  border: 2px solid var(--logo-orange);
-  border-radius: 25px;
-  height: fit-content;
-  width: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 1rem;
-}
-
-.page-launcher img {
-  max-height: 100%;
-  max-width: 100%;
-  height: 100%;
-  width: auto;
-  display: block;
-  border-radius: 25px;
-  opacity: 1;
-}
-
-.page-launcher:hover > img {
-  opacity: 0.2;
-}
-
-.page-launcher .caption {
-  color: var(--logo-orange);
-  text-align: center;
-  position: absolute;
-  opacity: 0;
-}
-
-.page-launcher:hover > .caption {
-  opacity: 1;
-}
-
-.gallery h2 {
-  color: var(--logo-orange);
-}
-
-
-
-
-
 @media only screen and (max-width: 470px) {
 
 
@@ -238,7 +165,30 @@ nav a:hover {
     justify-content: center;
   }
 }
+/* Banner section */
+.banner {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.banner-image {
+  width: 100%;
+}
+
+.banner-image img {
+  width: 100%;
+  opacity: 0.7;
+}
+
+.banner-text {
+  max-width: 960px;
+  text-align: center;
+  position: absolute;
+  padding: 2rem 0;
+}
 
 /* Content text */
 main p {
