--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -1,7 +1,4 @@
-<section class="banner">
-    <div class="banner-image">
-        <img src="./resources/images/"/>
-    </div>
+<section class="banner" style="background-image:url(./resources/images/banner.jpg);"> 
     <div class="banner-text">
         <h2></h2>
         <h3></h3>
