--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@
   --logo-shadow: #091140;
   --dark-accent-text: #323298;
   --warm-accent-text: #cb0000;
-
+  --dark-yellow: #fcff57;
 }
 
 /* Universal styles */
@@ -30,6 +30,7 @@ html {
 body {
   line-height: 1.5;
   width: 100%;
+  background-color: var(--logo-yellow);
 }
 
 .mobile {
@@ -82,21 +83,31 @@ a:visited {
   color: var(--warm-accent-text);
 }
 
+.tablet {
+  display: none; 
+}
+
 /* Header section */
 header {
   display: flex;
   flex-direction: row;
-  
   align-items: center;
   background-image: url("../images/logo_banner.jpg");
   background-repeat: no-repeat;
   background-position: left;
-  height: 160px;
+  background-size: contain;
+  height: 80px;
   background-color: white;
 }
 
-.logo {
-  width: 266px;
+.logo-text {
+  width: 80px;
+  height: auto;
+  padding-left: 8px;
+}
+
+.logo-spacer {
+  width: 50px;
   height: 50px;
   visibility: hidden;
 }
@@ -111,29 +122,17 @@ nav {
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
   padding: 0.25rem 0;
-  margin: 0.5rem 0;
+  
   border-radius: 15px;
   flex: 1;
+  
 }
 
-nav ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: fit-content;
-  flex-wrap: wrap;
-}
-
-nav li {
-  display: inline;
-  margin: 0.4rem 0;
-}
-
-nav a {
+nav a, .dropbtn {
   /*margin: 0.5rem;*/
   color: var(--dark-accent-text);
   padding: 0.25rem 1rem;
-  border-radius: 15px;
+  border-radius: 15px
 }
 
 nav a:visited {
@@ -144,50 +143,37 @@ nav a:hover {
   background-color: var(--logo-yellow);
 }
 
-@media only screen and (max-width: 960px) {
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: fit-content;
+}
 
-  .product {
-    width: 47%;
-  }
+nav li {
+  display: inline;
+  margin: 0.4rem 0;
 }
 
 
 /* Main section */
-@media only screen and (max-width: 470px) {
 
-
-  .product {
-    width: 90%;
-    margin: 0 auto;
-  }
-
-  .gallery {
-    justify-content: center;
-  }
-}
 /* Banner section */
 .banner {
   width: 100%;
-  height: fit-content;
+  height: 200px;
+  margin-bottom: 1rem;
+  background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.banner-image {
-  width: 100%;
-}
-
-.banner-image img {
-  width: 100%;
-  opacity: 0.7;
-}
+  justify-content: center;
+}  
 
 .banner-text {
   max-width: 960px;
   text-align: center;
-  position: absolute;
-  padding: 2rem 0;
 }
 
 /* Content text */
@@ -197,8 +183,15 @@ main p {
   margin-bottom: 0.5rem;
 }
 
+.page-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .sub-section {
-  margin: 0.75rem 1rem;
+  max-width: 960px;
+  margin: 0.5rem 1rem;
 }
 
 main ul {
