--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,57 +1,70 @@
-.fotorama {
-    background-color: var(--logo-yellow);
-  }
-  /* Gallery section */
-  .site-map {
-    background-color: var(--logo-yellow);
-    width: 100%;
-  }
-  
-  .gallery {
-    display: flex;
-    justify-content: space-around;
-    margin: 3rem auto;
-    flex-wrap: wrap;
-    max-width: 960px;
-  }
-  
-  .page-launcher {
-    border: 2px solid var(--logo-orange);
-    border-radius: 25px;
-    height: fit-content;
-    width: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-  }
-  
-  .page-launcher img {
-    max-height: 100%;
-    max-width: 100%;
-    height: 100%;
-    width: auto;
-    display: block;
-    border-radius: 25px;
-    opacity: 1;
-  }
-  
-  .page-launcher:hover > img {
-    opacity: 0.2;
-  }
-  
-  .page-launcher .caption {
-    color: var(--logo-orange);
-    text-align: center;
-    position: absolute;
-    opacity: 0;
-  }
-  
-  .page-launcher:hover > .caption {
-    opacity: 1;
-  }
-  
-  .gallery h2 {
-    color: var(--logo-orange);
-  }
-  
+/* Fotorama carousel section */
+.carousel {
+  position: relative;
+}
+
+.billboard {
+  position: absolute;
+  background-color: rgba(9, 17, 64 , .6);
+  bottom: 15%;
+  left: 5%;
+  max-width: 560px;
+  padding-left: 1rem;
+}
+
+.billboard h1, .billboard h3 {
+  color: var(--logo-yellow);
+}
+/* Gallery section */
+.site-map {
+  width: 100%;
+}
+
+.gallery {
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem auto 0 auto;
+  flex-wrap: wrap;
+  max-width: 960px;
+}
+
+.page-launcher {
+  border: 2px solid var(--logo-orange);
+  border-radius: 25px;
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.page-launcher img {
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
+  width: auto;
+  display: block;
+  border-radius: 25px;
+  opacity: 1;
+}
+
+.page-launcher:hover > img {
+  opacity: 0.2;
+}
+
+.page-launcher .caption {
+  color: var(--logo-orange);
+  text-align: center;
+  position: absolute;
+  opacity: 0;
+}
+
+.page-launcher:hover > .caption {
+  opacity: 1;
+}
+
+.gallery h2 {
+  color: var(--logo-orange);
+}
+
