--- a/resources/css/mobile.css
+++ b/resources/css/mobile.css
@@ -22,6 +22,10 @@
     height: auto;
   }
 
+  .banner {
+    height: 160px;
+  }
+
   .billboard {
     position: static;
     background-color: transparent;
