--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -257,15 +257,14 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url(../images/footer_logo_full.png);
-  background-size: initial;
-  background-position: right;
+  background-image: url(../images/footer_logo.png), url(../images/footer_filler.png);
+  background-size: auto, 100% 200px;
+  background-position: bottom right, bottom left;
   background-repeat: no-repeat;
   height: 200px;
 }
 
 .footer-text-container {
-  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -275,9 +274,13 @@ footer {
   border-radius: 15px;
   padding: 1rem;
   text-align: center;
-  font-size: 0.75rem;
+  font-size: 1rem;
   border: 1px solid var(--logo-shadow);
   color: var(--logo-shadow);
+}
+
+address p:first-child {
+  font-weight: bold;
 }
 
 footer a {
