--- a/resources/css/job.css
+++ b/resources/css/job.css
@@ -2,5 +2,52 @@
 Remove after position is filled. */
 .job-teaser {
     padding: 1rem;
+    width: 80%;
+    max-width: 800px;
+    display: flex;
+    flex-direction: row;
+}
+
+.job-teaser .page-launcher .caption {
+    opacity: 1;
+}
+
+.job-teaser h2 {
+    color: var(--logo-orange);
+}
+
+.job-teaser img {
+    opacity: 0.2;
+}
+
+.job-headline {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.job-button {
+    border: 2px solid var(--logo-orange);
+    border-radius: 10px;
+    height: 3rem;
+    width: 12rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(254, 101, 0, 0.5);
+    margin-bottom: 0.5rem;
     
 }
+
+.job-button h2 {
+    
+    font-size: 1.5rem;
+    
+}
+
+@media only screen and (max-width: 600px) {
+    .job-headline {
+      display: none;
+    }
+}
+  
