--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -1,4 +1,7 @@
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link, 
+.nav-tabs .nav-link.active, 
+.nav-tabs .nav-link.active:hover, 
+.nav-tabs .nav-link:focus {
     color: var(--logo-orange);
     background-color: var(--logo-yellow);
     border-color: var(--logo-orange) var(--logo-orange) var(--logo-yellow);
@@ -8,7 +11,7 @@
   color:var(--dark-accent-text)
 }
 
-.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
+.nav-tabs .nav-link:hover {
   border-color: var(--logo-yellow) var(--logo-yellow) var(--logo-orange);
   color: var(--logo-orange);
 }
