--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -36,3 +36,63 @@
 .sponsor-name {
   font-size: x-large;
 }
+
+
+.gallery {
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem auto 0 auto;
+  flex-wrap: wrap;
+  max-width: 960px;
+}
+
+.page-launcher {
+  position: relative;
+  border: 2px solid var(--logo-orange);
+  border-radius: 25px;
+  height: 200px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  overflow: hidden;
+}
+
+.page-launcher img {
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
+  width: auto;
+  display: block;
+  border-radius: 25px;
+  opacity: 1;
+}
+
+.page-launcher:hover > img {
+  opacity: 0.2;
+}
+
+.page-launcher .caption {
+  color: var(--logo-orange);
+  text-align: center;
+  position: absolute;
+  opacity: 0;
+  max-width: 100%;
+}
+
+.page-launcher:hover > .caption {
+  opacity: 1;
+}
+
+.sticky .caption {
+  opacity: 1;
+}
+
+.sticky img {
+  opacity: 0.2
+}
+
+.gallery h2 {
+  color: var(--logo-orange);
+}
