--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -62,7 +62,7 @@
 .sponsor-card img {
   max-height: 100%;
   max-width: 100%;
-  height: 100%;
+  height: auto;
   width: auto;
   display: block;
   border-radius: 25px;
