--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -49,8 +49,8 @@
   position: relative;
   border: 1px solid var(--logo-orange);
   border-radius: 25px;
-  height: 200px;
-  width: 200px;
+  height: 175px;
+  width: 175px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,6 +96,6 @@
   opacity: 0.2
 }
 
-.sponsorship-level-row h3 {
+.sponsor-level.caption {
   color: var(--logo-orange);
 }
