--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -74,6 +74,7 @@
   position: absolute;
   opacity: 0;
   max-width: 100%;
+  max-height: 100%;
   margin: 0.5rem;
 }
 
@@ -92,7 +93,6 @@
 
 .sponsor-card.sticky img {
   opacity: 0.2;
-  width: 100%;
 }
 
 .sponsor-level.caption h4 {
