--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -47,6 +47,10 @@
   flex-grow: 1;
 }
 
+.sponsor-years {
+  color:var(--logo-orange);
+}
+
 .sponsor-card {
   position: relative;
   border: 1px solid var(--logo-orange);
