--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -47,7 +47,8 @@
   flex-grow: 1;
 }
 
-.sponsor-card {
+.sponsor-card,
+.sponsorship-level-card {
   position: relative;
   border: 1px solid var(--logo-orange);
   border-radius: 25px;
@@ -79,15 +80,16 @@
 .sponsor-card .caption {
   color: var(--logo-orange);
   text-align: center;
-  position: absolute;
+  /* position: absolute; */
   opacity: 0;
   max-width: 100%;
   max-height: 100%;
   margin: 0.5rem;
+  display: none;
 }
 
 .sponsor-card .caption h4 {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
 } 
 
 .sponsor-years {
@@ -97,11 +99,21 @@
   display: none;
 }
 
+.sponsor-card:hover {
+  overflow: visible;
+  height: auto;
+}
+
 .sponsor-card:hover > .caption,
-.sponsor-card.no-logo:hover > .caption,
-.sponsor-card:hover > .sponsor-years,
-.sponsor-card.no-logo:hover > .sponsor-years {
+.sponsor-card.no-logo:hover > .caption {
   opacity: 1; 
+  display: block;
+  height: fit-content;
+  min-height: fit-content;
+}
+
+.sponsor-card:hover .sponsor-years,
+.sponsor-card.no-logo:hover .sponsor-years {
   display: block;
 }
 
@@ -109,12 +121,19 @@
   opacity: 0.75;
 }
 
-.sticky .caption {
+.sponsorship-level-card .caption {
   opacity: 1;
+  position: absolute;
+  font-size: 1rem;
 }
 
-.sponsor-card.sticky img {
+.sponsorship-level-card img {
+  position: absolute;
   opacity: 0.2;
+  max-height: 100%;
+  max-width: 100%;
+  height: auto;
+  width: auto;
 }
 
 .sponsor-level.caption h4 {
