--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -96,26 +96,39 @@
   color: var(--logo-orange);
   font-size: 0.75rem;
   text-transform: uppercase;
+  /* display: none; */
+}
+
+.sponsor-card.hover {
+  overflow: visible;
+  height: auto;
   display: none;
+  position: absolute;
+  background-color: var(--logo-yellow);
+  z-index: 500;
 }
 
 .sponsor-card:hover {
-  overflow: visible;
-  height: auto;
+  visibility: hidden;
 }
 
-.sponsor-card:hover > .caption,
-.sponsor-card.no-logo:hover > .caption {
-  opacity: 1; 
+.sponsor-card.hover:hover {
   display: block;
+}
+
+/* .sponsor-card:hover > .caption,
+.sponsor-card.no-logo:hover > .caption { */
+.sponsor-card.hover > .caption,
+.sponsor-card.no-logo.hover > .caption {
+  opacity: 1; 
   height: fit-content;
   min-height: fit-content;
 }
-
+/* 
 .sponsor-card:hover .sponsor-years,
 .sponsor-card.no-logo:hover .sponsor-years {
   display: block;
-}
+}  */
 
 .sponsor-card.no-logo .caption {
   opacity: 0.75;
