--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -81,7 +81,7 @@
   color: var(--logo-orange);
   text-align: center;
   /* position: absolute; */
-  opacity: 0;
+  /* opacity: 0; */
   max-width: 100%;
   max-height: 100%;
   margin: 0.5rem;
@@ -108,13 +108,28 @@
   left: 0;
   background-color: var(--logo-yellow);
   z-index: 500;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.sponsor-card .no-hover {
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
+  height: 100%;
+  /* width: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sponsor-card:hover > .no-hover {
   visibility: hidden;
 }
 
-.sponsor-card.hover:hover {
+.sponsor-card:hover > .hover {
   display: block;
 }
 
