--- a/resources/css/sponsors.css
+++ b/resources/css/sponsors.css
@@ -85,7 +85,7 @@
   max-width: 100%;
   max-height: 100%;
   margin: 0.5rem;
-  display: none;
+  /* display: none; */
 }
 
 .sponsor-card .caption h4 {
@@ -119,7 +119,7 @@
   max-height: 100%;
   position: relative;
   height: 100%;
-  /* width: 100%; */
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -131,6 +131,15 @@
 
 .sponsor-card:hover > .hover {
   display: block;
+  height: auto;
+  max-height: none;
+  border: 1px solid var(--logo-orange);
+  border-radius: 25px;
+}
+
+.sponsor-card:hover {
+  overflow-y: visible;
+  border: none;
 }
 
 /* .sponsor-card:hover > .caption,
